--- a/drivesafe_app/src/map_template.html
+++ b/drivesafe_app/src/map_template.html
@@ -9,7 +9,7 @@
         padding: 0;
       }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDpX6IhznYb6YARjcAsUUmAWNju1vWQik&callback=initMap" async defer></script>
     <script>
         var map;
         var geocoder;
